# aoc-2022

./: README.md
src/: CMakeLists.txt  main.cpp  util.h  week1.cpp  week1.h  week2.cpp  week2.h  week3.cpp  week3.h
